# CCEM

./: .gitignore  README.md  docker-compose.yaml
ccem/: Dockerfile  pom.xml
ccem/src/main/java/pt/CCEM/ccem/: CcemApplication.java
ccem/src/main/java/pt/CCEM/ccem/counties/: CountiesAPI.java  CountiesController.java  CountiesService.java
ccem/src/main/java/pt/CCEM/ccem/data/: County.java  Event.java  Region.java  Space.java  TimeScope.java
ccem/src/main/java/pt/CCEM/ccem/events/: EventsAPI.java  EventsController.java  EventsRepository.java  EventsService.java
ccem/src/test/java/pt/CCEM/ccem/: CcemApplicationTests.java
ccem_client/: .gitignore  package-lock.json  package.json
ccem_client/src/: App.tsx  main.tsx
ccem_client/src/components/: NavBar.tsx
ccem_client/src/components/structure/: autocomplete.css  main.tsx
ccem_client/src/pages/: County.tsx  Main.tsx
rust/: Cargo.toml  Dockerfile
rust/src/: main.rs  service.rs
rust/src/database/: counties.rs  events.rs  mod.rs  prelude.rs  regions.rs  spaces.rs  spatial_ref_sys.rs  time_scopes.rs
