[package]
name = "rust"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.6"
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
tower-http = { version = "0.3.4", features = ["cors"] }
once_cell = "1.8.0"
dotenvy = "0.15"
sea-orm = { version = "0.11.3", features = ["sqlx-postgres", "runtime-tokio-native-tls"] }